--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.8.0",
     "json-server": "^1.0.0-alpha.23",
+    "ngx-toastr": "^18.0.0",
     "npm-run-all": "^4.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
